--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,15 @@ set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
 # Compiler flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-deprecated-declarations -fPIC")
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -Wall -Xcompiler -fPIC")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wno-deprecated-declarations -fPIC")
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3 -Xcompiler -Wall -Xcompiler -fPIC")
+set(CMAKE_CUDA_ARCHITECTURES 86)
 
 # Path to custom CMake modules
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
 # Find TensorRT and CUDA Toolkit
-set(TensorRT_DIR /home/yz9qvs/projects/TensorRT-10.1.0.27/) # TODO change
+set(TensorRT_DIR "${CMAKE_SOURCE_DIR}/external/TensorRT-10.1.0.27") # TODO change
 find_package(TensorRT REQUIRED)
 find_package(CUDAToolkit REQUIRED)
 
